Creating data cleaning notebook and fixing the first tests.