@@ -45,7 +45,7 @@ lazy val root = (project in file("."))
     Test / logBuffered := false,
     Test / parallelExecution := false,
     
-    // Fork JVM for tests with Java 24 compatibility
+    // Fork JVM for tests with Java 11 compatibility
     Test / fork := true,
     Test / javaOptions ++= Seq(
       "-Dspark.master=local[2]",
@@ -53,10 +53,16 @@ lazy val root = (project in file("."))
       "-Dspark.sql.shuffle.partitions=2",
       "-Xmx2g",
       
-      // Critical Hadoop compatibility workaround for Java 24
+      // Hadoop compatibility
       "-Dhadoop.home.dir=/tmp",
       
-      // Java module system permissions - minimal set
+      // Export internal Java packages to Spark (CRITICAL for Java 11+)
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/sun.nio.cs=ALL-UNNAMED", 
+      "--add-exports=java.base/sun.security.action=ALL-UNNAMED",
+      "--add-exports=java.base/sun.util.calendar=ALL-UNNAMED",
+      
+      // Open internal Java packages to Spark
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
